--- a/notebooks/Advection.ipynb
+++ b/notebooks/Advection.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the cell containing the function ``advection``. Read the comments describing each of the steps."
+    "Run the cell containing the function ``advection_upwind``. Read the comments describing each of the steps."
    ]
   },
   {
